# embedded_metrics

./: CMakeLists.txt  LICENSE  README.md
include/: cw_emf.h  named.h
tests/: bootstrap.cpp  catch2.h  emf_tests.cpp  json.h
